--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "bin/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node ."
+    "start": "node ."
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "yargs": "^17.5.1"
+    "nodemon": "^2.0.20"
   }
 }
